--- a/html/contacto.html
+++ b/html/contacto.html
@@ -63,12 +63,12 @@
     </style>
 </head>
 <body>
-    <a href="file:///Users/francoferrero/Documents/Pag.Web/home.html" class="close-button"> <img src="../fotos/close_20dp_8B572A_FILL0_wght400_GRAD0_opsz20.png" alt=""></a>
+    <a href="file:///Users/francoferrero/Documents/Pag.Web/index.html" class="close-button"> <img src="../fotos/close_20dp_8B572A_FILL0_wght400_GRAD0_opsz20.png" alt=""></a>
     <ul class="menu">
-        <li><a href="file:///Users/francoferrero/Documents/Pag.Web/home.html">INICIO</a></li>
+        <li><a href="file:///Users/francoferrero/Documents/Pag.Web/index.html">INICIO</a></li>
         <li><a href="https://www.google.com/maps/reserve/v/dine/c/eFtwdpA44a0?source=pa&opi=89978449&hl=en-AR&gei=D3iuZr65KqGe5OUPpJrX6Q0&sourceurl=https%3A%2F%2Fwww.google.com%2Fsearch%3Fclient%3Dsafari%26rls%3Den%26q%3DRestaurante%2BCantarrana%2BMalaga%2BCentro%26ie%3DUTF-8%26oe%3DUTF-8&ihs=3">RESERVAS</a></li>
         <li><a href="">MENU</a></li>
-        <li><a href="file:///Users/francoferrero/Documents/Pag.Web/home.html">CONTACTO</a></li>
+        <li><a href="file:///Users/francoferrero/Documents/Pag.Web/index.html">CONTACTO</a></li>
     </ul>
 </body>
 </html>
