--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <section class="hero">
-        <div> <a href="./html/contacto.html"><img class="menu"  src="./fotos/menu_20dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png" alt=""> </a>
+        <div> <a href="/contacto.html"><img class="menu"  src="./fotos/menu_20dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png" alt=""> </a>
         </div>
         <div class="hero-content">
             <h1>PARRILLA CANTARRANA</h1>
