--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,8 @@
     <title>Menú Vertical</title>
     <style>
         body {
-            background-color: #fff7ed;
-            color: #8B572A;
+            background-image: url('./fotos/alga.jpg');
+            color: #ffffff;
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
@@ -28,12 +28,16 @@
         }
         .menu li a {
             text-decoration: none;
-            color: #8B572A;
-            font-size: 24px;
-            letter-spacing: 2px;
+            color: #ffffff;
+            font-size: 6rem; /* Tamaño de fuente grande */
+    letter-spacing: 0.2rem; /* Espaciado entre letras */
+    font-weight: 200;
+    font-family: 'Helvetica Neue', 'Arial', sans-serif;
+    font-size: xx-large;
+
         }
         .menu li a:hover {
-            color: #f4a261;
+            color: #bbbbbb;
         }
         .menu li::after {
             content: "";
@@ -63,12 +67,12 @@
     </style>
 </head>
 <body>
-    <a href="home.html" class="close-button"> <img src="./fotos/close_20dp_8B572A_FILL0_wght400_GRAD0_opsz20.png" alt=""></a>
+    <a href="home.html" class="close-button"> <img src="./fotos/close_20dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png" alt=""></a>
     <ul class="menu">
         <li><a href="home.html">INICIO</a></li>
-        <li><a href="https://www.google.com/maps/reserve/v/dine/c/eFtwdpA44a0?source=pa&opi=89978449&hl=en-AR&gei=D3iuZr65KqGe5OUPpJrX6Q0&sourceurl=https%3A%2F%2Fwww.google.com%2Fsearch%3Fclient%3Dsafari%26rls%3Den%26q%3DRestaurante%2BCantarrana%2BMalaga%2BCentro%26ie%3DUTF-8%26oe%3DUTF-8&ihs=3">RESERVAS</a></li>
-        <li><a href="">MENU</a></li>
-        <li><a href="home.html#contacto">CONTACTO</a></li>
+        <li><a href="https://api.whatsapp.com/message/MCK3PCRE2ZVFE1?autoload=1&app_absent=0">RESERVAS</a></li>
+        <li><a href="https://shimahandrollbar.com/carta.pdf">MENU</a></li>
+        <li><a href="https://api.whatsapp.com/message/MCK3PCRE2ZVFE1?autoload=1&app_absent=0">CONTACTO</a></li>
     </ul>
 </body>
 </html>
